# py_code_meli

./: README.md  pyproject.toml
py_code_meli/: __init__.py  validator.py
tests/: test_py_code_meli.py
