[tool.poetry]
name = "py_code_meli"
version = "0.1.0"
description = "This python package gives you a simple method that you can validate code meli (Iranian National Code) with it."
authors = ["ali <lmntrix.afr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
